# playground-http-speedrun

./: README.md
http_01/: Cargo.toml  README.md
http_01/src/: cli.rs  main.rs
http_02/: Cargo.toml  README.md
http_02/src/: main.rs
http_03/: Cargo.toml  README.md
http_03/src/: main.rs
http_04/: Cargo.toml
http_04/http_04/: Cargo.toml
http_04/http_04/src/: main.rs
http_04/src/: main.rs
