[package]
name = "http_02"
version = "0.1.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yoshuawuyts/http_02"
documentation = "https://docs.rs/http_02"
description = "Hash a password"
authors = ["Yoshua Wuyts <yoshuawuyts@gmail.com>"]
readme = "README.md"

[dependencies]
structopt = "0.2.10"
otpauth = "0.2.6"
rust-argon2 = "0.3.0"
warp = "0.1.1"
rand = "0.5.5"

[dev-dependencies]

[build-dependencies]
structopt = "0.2.10"
warp = "0.1.1"
